Rename
Signed-off-by: Ramin Esfandiari <ramin.esfandiari@nav.no>